# Touch-N-Stars

./: .eslintrc.js  .gitignore  .prettierrc  CHANGELOG.md  README.md  README_en.md  capacitor.config.json  ionic.config.json  package-lock.json  package.json  tailwind.config.js  vue.config.js
.github/workflows/: android-release.yml  release.yml
android/: build.gradle  capacitor.settings.gradle
android/app/: .gitignore  build.gradle  capacitor.build.gradle  google-services.json
public/: index.html  stars.csv
scripts/: add-locale-entry-all.js  add-locale-entry.js
scripts/helpers/: locale.js
server/: server.py  version.txt
src/: App.vue  i18n.js  main.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.properties
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/assets/: tailwind.css  tutorial.json
src/components/: AboutModal.vue  AutofocusGrafik.vue  ConnectionButton.vue  FocusPage.vue  GuiderGraph.vue  LastLogs.vue  LastMessage.vue  NavigationComp.vue  NavigationSubComp.vue  SettingsComp.vue  StatusBool.vue  StatusString.vue  SubNav.vue  TargetPic.vue  TargetSearch.vue  TppaPage.vue  TrargetPic.vue  TutorialModal.vue  WeatherModal.vue  changeFilter.vue  connectEquipment.vue  controlMount.vue  controlRotator.vue  infoCamera.vue  infoFocuser.vue  infoMount.vue  infoRotator.vue  profilSelect.vue  rmsGraph.vue  settingsCamera.vue  settingsCameraCooler.vue  slewAndCenter.vue  testSwitch.vue  testTest.vue  toggleButton.vue
src/locales/: cn.json  cz.json  de.json  en.json  es.json  fr.json  it.json  klingon.json  (+1 more)
(+116 files in other folders)
