[package]
name = "Touch-N-Stars"
version = "1.2.0"
description = "Nina control app"
authors = ["Christian Wöhrle"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

#[package.metadata.android]
#targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[patch.crates-io]
wry = { git = "https://github.com/ahqsoftwares/wry.git", branch = "patch-2" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-log = "2.2.1"
tauri-plugin-geolocation = "2.2.3"

